--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": false,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/globals.css",
+    "css": "src/index.css",
     "baseColor": "slate",
     "cssVariables": false,
     "prefix": ""
